--- a/filteredMenu.html
+++ b/filteredMenu.html
@@ -21,6 +21,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="vue.js"></script>
+    <script src="data.js"></script>
   </body>
 </html>
