--- a/menu.html
+++ b/menu.html
@@ -45,6 +45,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="vue.js"></script>
+    <script src="data.js"></script>
   </body>
 </html>
