--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 
     <div class="filter-button">
         <a href="filteredMenu.html"> 
-            <h3> Filter het menu </h3>
+            <h3 class="filter-text"> Filter het menu </h3>
         </a>
     </div> 
 
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div class="sub-categorie"> <h2> PANNENKOEKEN  </h2> </div>
+    <div class="sub-categorie "> <h2> PANNENKOEKEN  </h2> </div>
     <div class="menu-categorie" >
       <div v-for="data in menu"> 
         <div v-if="data.categorie=='Pannenkoeken'" > 
